sphinx-deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sphinx-deployment-v2
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: sphinx-app-v2
    spec:
      containers:
      - name: sphinx-project
        image: hanymichael/sphinx-project:v2
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sphinx-svc-v2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30102
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sphinx-app-v2
