sphinx-deployment-v3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sphinx-deployment-v3
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: sphinx-app-v3
    spec:
      containers:
      - name: sphinx-project
        image: hanymichael/sphinx-app:v3.0.5
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sphinx-svc-v3
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30103
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: sphinx-app-v3
