sphinx-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sphinx-ing-rules
spec:
  rules:
  - host: sphinx-v1.apps.hypervizor.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sphinx-svc-v1
          servicePort: 80
  - host: sphinx-v2.apps.hypervizor.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sphinx-svc-v2
          servicePort: 80
